[package]
name = "daktronics-allsport-5000"
version = "0.1.0"
authors = ["zabackary"]
description = "A Rust implementation of decoders for the Daktronics All Sport 5000's serial output"
license = "MIT"
homepage = "https://github.com/zabackary/daktronics-allsport-5000-rs"
repository = "https://github.com/zabackary/daktronics-allsport-5000-rs"
documentation = "http://docs.rs/daktronics-allsport-5000"
readme = "README.md"
keywords = ["daktronics", "daktronics-allsport-5000"]
categories = ["asynchronous", "hardware-support"]
edition = "2021"

[dependencies]
bytes = "^1.6.0"
futures-util = { version = "^0.3.30", optional = true }
paste = "^1.0.15"
tokio = { version = "^1.38.0", default-features = false, optional = true }
tokio-serial = { version = "^5.4.4", features = ["codec"], optional = true }
tokio-util = { version = "^0.7.11", optional = true }

[dev-dependencies]
futures-util = "^0.3.30"
tokio = { version = "^1.38.0", features = ["full"] }

[features]
default = ["tokio-serial"]
tokio-serial = ["tokio", "dep:tokio-serial"]
tokio = ["async", "dep:tokio", "dep:tokio-util"]
async = ["dep:futures-util"]
serial = []
