[package]
name = "daktronics-allsport-5000"
version = "0.5.0"
authors = ["zabackary"]
description = "A Rust implementation of decoders for the Daktronics All Sport 5000's serial output"
license = "MIT"
homepage = "https://github.com/zabackary/daktronics-allsport-5000-rs"
repository = "https://github.com/zabackary/daktronics-allsport-5000-rs"
documentation = "http://docs.rs/daktronics-allsport-5000"
readme = "README.md"
keywords = ["daktronics", "allsport-5000"]
categories = ["asynchronous", "hardware-support"]
edition = "2021"

[dependencies]
bytes = "^1.10.1"
futures-util = { version = "^0.3.31", optional = true }
paste = "^1.0.15"
serde = { version = "^1.0.219", optional = true }
tokio = { version = "^1.44.1", default-features = false, optional = true }
tokio-serial = { version = "^5.4.5", features = ["codec"], optional = true }
tokio-util = { version = "^0.7.14", optional = true }

[dev-dependencies]
futures-util = "^0.3.31"
serde_json = "^1.0"
tokio = { version = "^1.44.1", features = ["full"] }
tokio-test = { version = "^0.4.4" }

[features]
default = ["tokio-serial"]
tokio-serial = ["tokio", "dep:tokio-serial"]
tokio = ["async", "dep:tokio", "dep:tokio-util"]
async = ["dep:futures-util"]
serde = ["dep:serde"]

[[example]]
name = "dump_basketball_as_json"
required-features = ["tokio-serial", "serde"]

[[example]]
name = "read_data_buffer"

[[example]]
name = "read_raw_packet"
